[tool.poetry]
name = "steganopy"
version = "0.0.1"
description = "Steganopy"
authors = ["Lương Quang Mạnh <luongquangmanh85@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sanic = "^20.6.3"
pillow = "^7.2.0"
firebase-admin = "^4.3.0"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
